# aurora-brains

./: .gitignore  Cargo.toml  NOTICE  README.md  go.mod  go.sum
agent/: agent.go  build.sh
brain-rs/: Cargo.toml  build.sh
brain-rs/src/: lib.rs  wire.rs
brains/agent/: Cargo.toml  build.sh
brains/agent/src/: lib.rs
brains/camel/: Cargo.toml  build.sh
brains/camel/src/: lib.rs  quarantine.rs
brains/echo/: Cargo.toml  build.sh
brains/echo/src/: lib.rs
programs/agent/: Cargo.toml  build.sh  interface.json
programs/agent/src/: lib.rs
programs/camel/: Cargo.toml  build.sh  interface.json
programs/camel/src/: lib.rs  quarantine.rs
programs/echo/: Cargo.toml  build.sh  interface.json
programs/echo/src/: lib.rs
sdk/: Cargo.toml
sdk/src/: lib.rs
