[workspace]
resolver = "2"
members = ["sdk", "programs/agent", "programs/camel", "programs/echo"]

# Every program is one crate under programs/<name>/, compiled to wasm32-wasip1
# as a cdylib. New program: copy programs/echo/Cargo.toml, depend on the sdk,
# write src/lib.rs and interface.json, add the member here.

[workspace.package]
version = "0.2.0"
edition = "2021"

[workspace.dependencies]
aurora-program-sdk = { path = "sdk" }
anyhow = "1"
extism-pdk = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
