[package]
name = "camel-brain"
description = "The plan/execute split brain (CaMeL): the planning LLM never reads tool output — results are quarantined guest-side as $N variables and substituted into later calls only after the action is chosen, so injected text in a result can never steer the plan."
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
aurora-brain-sdk.workspace = true
anyhow.workspace = true
extism-pdk.workspace = true
serde.workspace = true
serde_json.workspace = true
