[package]
name = "echo-brain"
description = "The smallest Aurora brain: no LLM, no capabilities — it reads its input and echoes back a deterministic answer, exercising the SDK's input→output plumbing."
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
aurora-brain-sdk.workspace = true
anyhow.workspace = true
extism-pdk.workspace = true
serde.workspace = true
serde_json.workspace = true
