[package]
name = "agent"
description = "The general-purpose Aurora agent: a tool-calling LLM loop over the capabilities its manifest grants."
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
aurora-program-sdk.workspace = true
anyhow.workspace = true
extism-pdk.workspace = true
serde.workspace = true
serde_json.workspace = true
# Cloudflare's streaming HTML rewriter (pure Rust, wasm-proven) — used to strip
# fetched pages down to text so one page can't flood the model's context.
lol_html = "2"
